Refactor mappers to improve readability