@@ -25,8 +25,8 @@ import io.apicurio.datamodels.models.asyncapi.AsyncApiReferenceable;
 import io.apicurio.datamodels.models.asyncapi.v30.AsyncApi30Channel;
 import io.apicurio.datamodels.models.asyncapi.v30.AsyncApi30Components;
 import io.ballerina.asyncapi.core.Constants;
-import io.ballerina.asyncapi.core.implementation.v3.message.MessageMapperV3;
 import io.ballerina.asyncapi.core.implementation.v3.doc.ExternalDocMapperV3;
+import io.ballerina.asyncapi.core.implementation.v3.message.MessageMapperV3;
 import io.ballerina.asyncapi.core.implementation.v3.tag.TagMapperV3;
 import io.ballerina.asyncapi.core.model.channel.AsyncApiChannel;
 import io.ballerina.asyncapi.core.model.server.AsyncApiServer;
@@ -35,7 +35,8 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.util.ArrayList;
-import java.util.LinkedHashMap;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -57,30 +58,26 @@ public final class ChannelMapperV3 {
      * @param channels   the Apicurio channels object
      * @param components the AsyncAPI components (for $ref resolution)
      * @param serversMap the map of server names to AsyncApiServer objects (for server resolution)
-     * @return the mapped channels map, or null if channels is null
+     * @return the mapped channels map, or an empty map if channels is null
      */
-    public static Map<String, AsyncApiChannel> map(
-            AsyncApiChannels channels,
-            AsyncApiComponents components,
+    public static Map<String, AsyncApiChannel> map(AsyncApiChannels channels, AsyncApiComponents components,
             Map<String, AsyncApiServer> serversMap) {
         if (channels == null) {
-            return Map.of();
+            return Collections.emptyMap();
         }
-        List<String> channelNames = null;
-        if (channels instanceof MappedNode<?> mappedNode) {
-            channelNames = mappedNode.getItemNames();
+        if (!(channels instanceof MappedNode<?> mappedNode)) {
+            return Collections.emptyMap();
         }
+        List<String> channelNames = mappedNode.getItemNames();
         if (channelNames == null || channelNames.isEmpty()) {
-            return Map.of();
+            return Collections.emptyMap();
         }
-        Map<String, AsyncApiChannel> result = new LinkedHashMap<>();
+        Map<String, AsyncApiChannel> result = new HashMap<>();
         for (String name : channelNames) {
-            Object item = null;
-            if (channels instanceof MappedNode<?> mappedNode) {
-                item = mappedNode.getItem(name);
-            }
-            if (item != null) {
-                AsyncApiChannel mapped = mapOne(name, (Node) item, components, serversMap);
+            Node item = (Node) mappedNode.getItem(name);
+            // Add additional version checks here as new AsyncAPI 3.x versions are supported.
+            if (item instanceof AsyncApi30Channel channelItem) {
+                AsyncApiChannel mapped = mapChannelItem(name, channelItem, components, serversMap);
                 if (mapped != null) {
                     result.put(name, mapped);
                 }
@@ -90,168 +87,95 @@ public final class ChannelMapperV3 {
     }
 
     /**
-     * Maps a single channel node, resolving any {@code $ref} before delegating to
-     * {@link #buildChannel(Node, AsyncApiComponents, Map)}.
+     * Maps a single {@link AsyncApi30Channel}, resolving any {@code $ref} and building the
+     * {@link AsyncApiChannel} model.
      *
-     * @param name       the channel name (key in the channels map)
-     * @param channelNode the Apicurio channel node
+     * @param name        the channel name (key in the channels map)
+     * @param channelItem the Apicurio channel object
      * @param components  the AsyncAPI components (for $ref resolution)
      * @param serversMap  the map of server names to pre-built AsyncApiServer objects
      * @return the mapped AsyncApiChannel, or null if the channel cannot be resolved
      */
-    private static AsyncApiChannel mapOne(
-            String name,
-            Node channelNode,
-            AsyncApiComponents components,
-            Map<String, AsyncApiServer> serversMap) {
-        // Add additional version checks here as new AsyncAPI 3.x versions are supported.
-        if (channelNode instanceof AsyncApi30Channel typedChannel) {
-            String $ref = typedChannel.get$ref();
-            if ($ref != null) {
-                AsyncApiChannel resolved = resolveChannelRef($ref, components, serversMap);
+    public static AsyncApiChannel mapChannelItem(String name, AsyncApi30Channel channelItem,
+            AsyncApiComponents components, Map<String, AsyncApiServer> serversMap) {
+        // Handle $ref
+        String $ref = channelItem.get$ref();
+        if ($ref != null) {
+            if (!$ref.startsWith(Constants.CHANNELS_REF_PREFIX)) {
+                LOG.warn("Unsupported channel $ref format: {}. Skipping channel '{}'.", $ref, name);
+                return null;
+            }
+            if (components == null) {
+                return null;
+            }
+            // Add additional version checks here as new AsyncAPI 3.x versions are supported.
+            if (components instanceof AsyncApi30Components typedComponents) {
+                String channelName = $ref.substring(Constants.CHANNELS_REF_PREFIX.length());
+                Map<String, AsyncApi30Channel> channelsMap = typedComponents.getChannels();
+                AsyncApi30Channel resolved = channelsMap != null ? channelsMap.get(channelName) : null;
                 if (resolved == null) {
                     LOG.warn("Could not resolve channel $ref: {}. Skipping channel '{}'.", $ref, name);
                     return null;
                 }
-                return resolved;
+                if (resolved.get$ref() != null) {
+                    LOG.warn("Resolved channel $ref '{}' points to another $ref. Skipping.", resolved.get$ref());
+                    return null;
+                }
+                return mapChannelItem(name, resolved, components, serversMap);
             }
-        }
-        return buildChannel(channelNode, components, serversMap);
-    }
-
-    /**
-     * Resolves a {@code $ref} string to an {@link AsyncApiChannel} from components.
-     * In AsyncAPI 3.x, component channel refs use the format {@code #/components/channels/name}.
-     *
-     * @param $ref       the $ref string (e.g., {@code #/components/channels/MyChannel})
-     * @param components the AsyncAPI components object
-     * @param serversMap the map of server names to AsyncApiServer objects (for server resolution)
-     * @return the resolved channel model, or null if the ref format is unsupported or the channel is not found
-     */
-    private static AsyncApiChannel resolveChannelRef(
-            String $ref,
-            AsyncApiComponents components,
-            Map<String, AsyncApiServer> serversMap) {
-        if (!$ref.startsWith(Constants.CHANNELS_REF_PREFIX)) {
-            LOG.warn("Unsupported channel $ref format: {}. Skipping.", $ref);
             return null;
         }
-        String name = $ref.substring(Constants.CHANNELS_REF_PREFIX.length());
-        if (components == null) {
-            return null;
-        }
-        // Add additional version checks here as new AsyncAPI 3.x versions are supported.
-        if (components instanceof AsyncApi30Components typedComponents) {
-            Map<String, AsyncApi30Channel> channelsMap = typedComponents.getChannels();
-            AsyncApi30Channel channel = channelsMap != null ? channelsMap.get(name) : null;
-            if (channel == null) {
-                return null;
-            }
-            if (channel.get$ref() != null) {
-                LOG.warn("Resolved channel $ref '{}' points to another $ref. Skipping.", channel.get$ref());
-                return null;
-            }
-            return buildChannel(channel, components, serversMap);
-        }
-        return null;
-    }
 
-    /**
-     * Builds an {@link AsyncApiChannel} from an Apicurio channel object.
-     * Add additional version checks here as new AsyncAPI 3.x versions are supported.
-     *
-     * @param channel    the Apicurio channel object
-     * @param components the AsyncAPI components (for $ref resolution)
-     * @param serversMap the map of server names to AsyncApiServer objects (for server resolution)
-     * @return the mapped AsyncApiChannel, or null if the channel type is not supported
-     */
-    public static AsyncApiChannel buildChannel(
-            Node channel,
-            AsyncApiComponents components,
-            Map<String, AsyncApiServer> serversMap) {
-        // Add additional version checks here as new AsyncAPI 3.x versions are supported.
-        if (channel instanceof AsyncApi30Channel typedChannel) {
-            List<AsyncApiTag> tags = null;
-            if (typedChannel.getTags() != null) {
-                tags = typedChannel.getTags().stream()
-                        .map(tag -> TagMapperV3.map(tag, null))
-                        .toList();
-            }
-            return new AsyncApiChannel(
-                    typedChannel.getAddress(),
-                    MessageMapperV3.extractMessages(typedChannel, components),
-                    typedChannel.getTitle(),
-                    typedChannel.getSummary(),
-                    typedChannel.getDescription(),
-                    extractServers(channel, serversMap),
-                    ChannelParameterMapperV3.mapParameters(
-                            typedChannel.getParameters()),
-                    tags,
-                    ExternalDocMapperV3.map(typedChannel.getExternalDocs(), null),
-                    ChannelBindingsMapperV3.map(typedChannel.getBindings(), components),
-                    typedChannel.getExtensions()
-            );
-        }
-        return null;
-    }
-
-    /**
-     * Extracts servers from an AsyncAPI 3.0 channel.
-     * In v3, channel servers are always $refs to servers defined in the top-level servers map.
-     *
-     * @param channel    the AsyncAPI 3.0 channel object
-     * @param serversMap the map of server names to pre-built AsyncApiServer objects
-     * @return a list of AsyncApiServer objects, or null if no servers found
-     */
-    private static List<AsyncApiServer> extractServers(
-            Node channel,
-            Map<String, AsyncApiServer> serversMap) {
-        if (channel == null || serversMap == null) {
-            return null;
-        }
-        // Add additional version checks here as new AsyncAPI 3.x versions are supported.
-        if (channel instanceof AsyncApi30Channel typedChannel) {
-            List<? extends AsyncApiReferenceable> serverRefs = typedChannel.getServers();
-            if (serverRefs == null || serverRefs.isEmpty()) {
-                return null;
-            }
-            List<AsyncApiServer> result = new ArrayList<>();
+        // Extract servers
+        List<AsyncApiServer> servers = null;
+        List<? extends AsyncApiReferenceable> serverRefs = channelItem.getServers();
+        if (serverRefs != null && !serverRefs.isEmpty() && serversMap != null) {
+            List<AsyncApiServer> serverList = new ArrayList<>();
             for (AsyncApiReferenceable serverRef : serverRefs) {
                 if (serverRef == null) {
                     continue;
                 }
-                String $ref = serverRef.get$ref();
-                if ($ref == null) {
+                String serverRefStr = serverRef.get$ref();
+                if (serverRefStr == null) {
                     LOG.warn("Server reference in channel has no $ref. Skipping.");
                     continue;
                 }
-                String serverName = resolveServerRef($ref);
-                if (serverName == null) {
-                    LOG.warn("Unsupported server $ref format: {}. Skipping server.", $ref);
+                if (!serverRefStr.startsWith(Constants.SERVERS_REF_PREFIX)) {
+                    LOG.warn("Unsupported server $ref format: {}. Skipping server.", serverRefStr);
                     continue;
                 }
+                String serverName = serverRefStr.substring(Constants.SERVERS_REF_PREFIX.length());
                 AsyncApiServer server = serversMap.get(serverName);
                 if (server != null) {
-                    result.add(server);
+                    serverList.add(server);
                 } else {
                     LOG.warn("Server reference '{}' not found in servers map. Skipping.", serverName);
                 }
             }
-            return result.isEmpty() ? null : result;
+            if (!serverList.isEmpty()) {
+                servers = serverList;
+            }
         }
-        return null;
-    }
 
-    /**
-     * Resolves a $ref to a server name.
-     *
-     * @param $ref the $ref string (e.g., {@code #/servers/production})
-     * @return the server name, or null if invalid format
-     */
-    private static String resolveServerRef(String $ref) {
-        if (!$ref.startsWith(Constants.SERVERS_REF_PREFIX)) {
-            return null;
+        // Build channel
+        List<AsyncApiTag> tags = null;
+        if (channelItem.getTags() != null) {
+            tags = channelItem.getTags().stream()
+                    .map(tag -> TagMapperV3.map(tag, null))
+                    .toList();
         }
-        return $ref.substring(Constants.SERVERS_REF_PREFIX.length());
+        return new AsyncApiChannel(
+                channelItem.getAddress(),
+                MessageMapperV3.extractMessages(channelItem, components),
+                channelItem.getTitle(),
+                channelItem.getSummary(),
+                channelItem.getDescription(),
+                servers,
+                ChannelParameterMapperV3.mapParameters(channelItem.getParameters()),
+                tags,
+                ExternalDocMapperV3.map(channelItem.getExternalDocs(), null),
+                ChannelBindingsMapperV3.map(channelItem.getBindings(), components),
+                channelItem.getExtensions()
+        );
     }
 }
